...
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <Spinner
            android:id="@+id/spinnerHolidays"
            android:layout_width="174dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPaleVioltRed"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerviewHolidays"
            app:layout_constraintVertical_bias="0.0" />

        <ToggleButton
            android:id="@+id/tB_Database_Files"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="ToggleButton"
...
